# cuda-workshop

./: .gitignore  README.md
c/: Makefile  README.md  add.cu  add_parallel.cu  add_parallel_threads.cu  hello_world.cu
c/hello-cuda/: CMakeLists.txt  main.cu
python/: README.md  add_parallel.py
python/hello-cuda/: README.md  pyproject.toml
python/hello-cuda/src/hello_cuda/: main.py
rust/: Cargo.toml  README.md  rust-toolchain.toml
rust/add-cpu/: Cargo.toml  build.rs
rust/add-gpu/: Cargo.toml
rust/gpu-device/: Cargo.toml
rust/hello-cuda/: Cargo.toml
rust/hello-cuda/src/: main.rs
